Added security definition to swagger documentations
