# docs/swagger.yaml
@@ -61,11 +61,11 @@ definitions:
       id:
         type: integer
       postId:
-        type: integer
+        type: number
       updatedAt:
         type: string
       userId:
-        type: integer
+        type: number
     type: object
   entity.Post:
     properties:
@@ -80,15 +80,21 @@ definitions:
       updatedAt:
         type: string
       userId:
-        type: integer
+        type: number
     type: object
   security.Token:
     properties:
       token:
         type: string
     type: object
+host: http://localhost:8000
 info:
-  contact: {}
+  contact:
+    email: endlesskwazar@gmail.com
+    name: Alexandr
+  description: Swagger API for Golang Post Project.
+  title: Posts API documentation
+  version: "1.0"
 paths:
   /api/v1/comments/{id}:
     delete:
@@ -105,6 +111,8 @@ paths:
       responses:
         "204":
           description: ""
+      security:
+      - ApiKeyAuth: []
       summary: Delete comment
       tags:
       - Comments
@@ -134,6 +142,8 @@ paths:
             items:
               $ref: '#/definitions/entity.Comment'
             type: array
+      security:
+      - ApiKeyAuth: []
       summary: Update comment
       tags:
       - Comments
@@ -172,6 +182,8 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/entity.Comment'
+      security:
+      - ApiKeyAuth: []
       summary: Create post
       tags:
       - Posts
@@ -187,6 +199,8 @@ paths:
       responses:
         "204":
           description: ""
+      security:
+      - ApiKeyAuth: []
       summary: Delete post
       tags:
       - Posts
@@ -233,6 +247,8 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/entity.Post'
+      security:
+      - ApiKeyAuth: []
       summary: Update post
       tags:
       - Posts
@@ -277,6 +293,8 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/entity.Comment'
+      security:
+      - ApiKeyAuth: []
       summary: Creates comment for post
       tags:
       - Posts
@@ -321,4 +339,9 @@ paths:
       summary: Register new user
       tags:
       - Auth
+securityDefinitions:
+  ApiKeyAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
